change to secret key

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         node-version: '12.x'
     - run: npm install
     - name: scrape-action
+      env:
+        api_key: ${{ secrets.API_KEY }}
       uses: ./actions
-      with:
-        api_key: 'test'
+      
